--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
             </div>
             <ul class="nav-list">
                 <li class="nav-item">
-                    <a href="">Company</a>
+                    <a href="" data-target="#company">Company</a>
                 </li>
                 <li class="nav-item">
-                    <a href="">Vision</a>
+                    <a href="" data-target="#vision">Vision</a>
                 </li>
                 <li class="nav-item">
-                    <a href="">Game</a>
+                    <a href="" data-target="#game">Game</a>
                 </li>
                 <li class="nav-item">
-                    <a href="">Com2us ON</a>
+                    <a href="" data-target="#com2uson">Com2us ON</a>
                 </li>
                 <li class="nav-item">
-                    <a href="">Contacts</a>
+                    <a href="" data-target="#contacts">Contacts</a>
                 </li>
             </ul>
             <p class="text">Global Digital Paradigm Leader</p>
